FrostWire 2.2.3 build 647 - AUG/06/2020
 - jlibtorrent 1.2.7.0 -> 1.2.8.0 update
 - com.squareup.okhttp3:okhttp:4.4.1 -> 4.8.1
 - androidx.browser:browser:1.3.0-alpha04 -> 1.3.0-alpha05
 - com.google.re2j:re2j:1.3 -> 1.4
 - com.google.android.material:material:1.3.0-alpha01 -> 1.3.0-alpha02
 - com.google.android.gms:play-services-ads:19.2.0 -> 19.3.0
 - com.applovin:applovin-sdk:9.12.6 -> 9.13.1
 - com.unity3d.ads:unity-ads:3.4.2 -> 3.4.6

FrostWire 2.2.2 build 646 - AUG/01/2020
 - Considerably faster app startup
 - .apk size reduced 2.1MB
 - New 1337x (LeetX) search (thanks to @HimanshuSharma789 for his contribution)
 - New iDope search (thanks to @HimanshuSharma789 for his contribution)
 - Fixed Torrentz2 search dates (thanks to @HimanshuSharma789 for his contribution)
 - Multiple crash fixes on My Music (Player)
 - Settings screen now includes links to official reddit, twitter, facebook, discord chat, blog, rate us
 - jlibtorrent 1.2.7.0 recompiled with Android NDK r21d
 - com.google.android.material:material:1.2.0-alpha06 -> 1.3.0-alpha01
 - com.android.tools.build:gradle:3.6.3 -> 4.0.1
 - gradle-5.6.4 -> gradle-6.1.1
 - androidx.browser:browser:1.3.0-alpha01 -> 1.3.0-alpha04
 - com.google.android.gms:play-services-ads:19.1.0 -> 19.2.0
 - com.android.billingclient:billing:2.2.0 -> 3.0.0

FrostWire 2.2.1 build 642 - JUN/17/2020
 - jlibtorrent/libtorrent 1.2.7.0 update
 - OpenSSL 1.1.1g update
 - dev: jlibtorrent build with boost 1.73.0
 - Fixes bug getting source URL from TPB search result
 - lt: fix incorrect filename truncation at multi-byte character
 - lt: always announce listen port 1 when using a proxy
 - lt: add set_alert_fd in python binding, to supersede set_alert_notify
 - lt: fix bug in part files > 2 GiB
 - lt: add function to clear the peer list for a torrent
 - lt: fix resume data functions to save/restore more torrent flags
 - lt: limit number of concurrent HTTP announces