@@ -37,7 +37,6 @@ repositories {
     jcenter()
     mavenCentral()
     maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-    maven { url "https://s3.amazonaws.com/moat-sdk-builds" }
     flatDir { dirs 'libs' }
 }
 
@@ -184,7 +183,6 @@ android {
 
 dependencies {
     implementation 'com.google.re2j:re2j:1.4'
-    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.okhttp3:okhttp:4.8.1'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.material:material:1.3.0-alpha02'
@@ -192,16 +190,28 @@ dependencies {
     implementation 'androidx.browser:browser:1.3.0-alpha05'
     implementation 'androidx.exifinterface:exifinterface:1.2.0'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+
     implementation 'com.android.billingclient:billing:3.0.0'
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
     implementation 'com.squareup.picasso:picasso:3.0.0-SNAPSHOT'
     implementation 'com.google.android:flexbox:1.1.1'
 
+    // MoPub SDK requirements - https://github.com/mopub/mopub-android-sdk#requirements
+    implementation 'androidx.legacy:legacy-preference-v14:1.0.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'androidx.media2:media2-session:1.0.3'
+    implementation 'androidx.media2:media2-widget:1.0.3'
+    implementation 'androidx.media2:media2-player:1.0.3'
+    implementation 'com.mopub.volley:mopub-volley:2.1.0'
+
     // MoPub SDK
-    implementation('com.mopub:mopub-sdk-banner:5.12.0@aar') { transitive = true }
-    implementation('com.mopub:mopub-sdk-interstitial:5.12.0@aar') { transitive = true }
-    implementation('com.mopub:mopub-sdk-rewardedvideo:5.12.0@aar') { transitive = true }
+    implementation('com.mopub:mopub-sdk-banner:5.13.1@aar') { transitive = true }
+    implementation('com.mopub:mopub-sdk-fullscreen:5.13.1@aar') { transitive = true }
+
     // MoPub Mediation Partners
     implementation 'com.applovin:applovin-sdk:9.13.1'
     implementation 'com.mopub.mediation:applovin:9.13.1.0'
