@@ -1,6 +1,7 @@
 FrostWire 2.2.3 build 647 - AUG/06/2020
  - jlibtorrent 1.2.7.0 -> 1.2.8.0 update
  - com.squareup.okhttp3:okhttp:4.4.1 -> 4.8.1
+ - com.mopub:mopub-sdk-banner:5.12.0 -> 5.13.1
  - androidx.browser:browser:1.3.0-alpha04 -> 1.3.0-alpha05
  - com.google.re2j:re2j:1.3 -> 1.4
  - com.google.android.material:material:1.3.0-alpha01 -> 1.3.0-alpha02
